# stvg

./: .claudeignore  .gitignore  NORTH_STAR.md  README.md  START_PLAYING.md  analyze.ps1  play.ps1  pull_telemetry.ps1
Technical/StatisticalEngine/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  run.bat
Technical/StatisticalEngine/cmake/: CompilerOptions.cmake  Dependencies.cmake
Technical/StatisticalEngine/data/archetypes/: archetypes.json
Technical/StatisticalEngine/data/calibration/: historical_era_params.json  robin_garch_params.json
Technical/StatisticalEngine/data/ceos/: ceos.json
Technical/StatisticalEngine/data/config/: game_config.json
Technical/StatisticalEngine/data/deals/: deregulation_deals.json  modern_deals.json  post_war_deals.json
Technical/StatisticalEngine/data/events/: historical_events.json
Technical/StatisticalEngine/data/scenarios/: ai_endgame.json  crisis_mode.json  full_game.json  speedrun.json  tutorial.json
Technical/StatisticalEngine/docs/: ANDROID_BUILD.md  ARCHITECTURE.md
Technical/StatisticalEngine/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Technical/StatisticalEngine/frontend/src/: App.svelte  main.ts
Technical/StatisticalEngine/scripts/: analyze_autoplay.py  build-android.sh  capture_screenshots.mjs  clean_inputs.sh  package.sh
Technical/StatisticalEngine/src/: autoplay_main.cpp  main.cpp  wasm_bindings.cpp
Technical/StatisticalEngine/src/core/: placeholder.cpp
Technical/StatisticalEngine/src/game/: AnnualReportBuilder.cpp  CEOAbilityHandler.cpp  CrisisHandler.cpp  DecisionHandler.cpp
Technical/StatisticalEngine/static/: index.html
Technical/StatisticalEngine/telemetry/: README.md  session_smpxinf6telt2.jsonl  session_smpy25v6genq6.jsonl  session_smqa6pi49cjhj.jsonl  session_smqadtoi6ccip.jsonl  session_smqae6dfa7fh0.jsonl  session_smqafqv4k9gl9.jsonl  session_smqaftgtj1di6.jsonl  session_smqagacrmckkt.jsonl  session_smqaggqoag5p3.jsonl  session_smqagmf5b7ae2.jsonl  session_smqagmvg55wcx.jsonl  session_smqagschg8oki.jsonl  session_smqasi3eh7iar.jsonl  session_smqaspo2m5pv5.jsonl  session_smqasvwt65cqy.jsonl  session_smqau7cb3ivp7.jsonl  session_smqaui4nj7g7t.jsonl  session_smqav2u4ui212.jsonl  session_smqazbovm2c0.jsonl
Technical/StatisticalEngine/telemetry_remote/2026-06-13/: session_smoke_1781311349.jsonl  session_smoke_1781311349.report.md
Technical/StatisticalEngine/tests/autoplay/: test_95year_game.cpp  test_archetype_rebalance.cpp  test_personality_wiring.cpp  test_restrictions.cpp  test_sensitivity.cpp  test_sfc_full_game.cpp
Technical/StatisticalEngine/tests/core/: test_ceo.cpp  (+30 more)
(+231 files in other folders)
